--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -20,8 +20,11 @@
   background-color: $primary-color-extra-soft !important;
 }
 
-.bg-lavender {
-  background-color: lavender !important;
+.bg-orange {
+  background-color: $orange-color !important;
+}
+.text-orange {
+ color: $orange-color !important;
 }
 
 .text-secondary-teal {
