--- a/src/styles/variable.scss
+++ b/src/styles/variable.scss
@@ -2,6 +2,7 @@ $primary-color: #1e3a8a;
 $primary-color-soft: #8f9dc5;
 // $primary-color-extra-soft: #d2d8e8;
 $primary-color-extra-soft: #dfecff;
+$orange-color: #ff776b;
 
 $navy-blue: #15467a;
 $dark-blue: #0c1037;
