--- a/src/styles/variable.scss
+++ b/src/styles/variable.scss
@@ -2,6 +2,8 @@ $primary-color: #1e3a8a;
 $primary-color-soft: #8f9dc5;
 // $primary-color-extra-soft: #d2d8e8;
 $primary-color-extra-soft: #dfecff;
+$primary-color-extra-light: #eff6ff;
+
 $orange-color: #ff776b;
 
 $navy-blue: #15467a;
