--- a/src/styles/common.css
+++ b/src/styles/common.css
@@ -10,6 +10,10 @@
   color: #dfecff !important;
 }
 
+.text-theme-primary-extra-light {
+  color: #eff6ff !important;
+}
+
 .bg-theme-primary {
   background-color: #1e3a8a !important;
 }
@@ -20,6 +24,10 @@
 
 .bg-theme-primary-extra-soft {
   background-color: #dfecff !important;
+}
+
+.bg-theme-primary-extra-light {
+  background-color: #eff6ff !important;
 }
 
 .bg-orange {
@@ -81,4 +89,8 @@
 }
 .navbar .navbar-nav .nav-link:hover {
   color: #43c1c3;
+}
+
+.section-two .box-shadow {
+  box-shadow: 0px 0px 5px -1px #ff776b;
 }/*# sourceMappingURL=common.css.map */
